logs/eleme.openapi.sdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demo'...
Compiling './lib/python3.5/site-packages/demo/test.py'...
***   File "./lib/python3.5/site-packages/demo/test.py", line 20
    print auth_url
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eleme.openapi.sdk-0.0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/generatetool'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sdk'...
Listing './lib/python3.5/site-packages/sdk/apis'...
Listing './lib/python3.5/site-packages/sdk/exception'...
Listing './lib/python3.5/site-packages/sdk/oauth'...
Listing './lib/python3.5/site-packages/sdk/protocol'...
Listing './lib/python3.5/site-packages/sdk/util'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpleserver'...
Compiling './lib/python3.5/site-packages/simpleserver/server.py'...
***   File "./lib/python3.5/site-packages/simpleserver/server.py", line 54
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simpleserver/templates'...
Listing './share'...
Listing './share/python-wheels'...
